--- a/po-libgimp/hu.po
+++ b/po-libgimp/hu.po
@@ -1,15 +1,16 @@
 # Hungarian translation of gimp-libgimp.
 # Copyright (C) 2000-2004 Free Software Foundation, Inc.
 # Andras Timar <timar@gnome.hu>, 2000.
-# Laszlo Dvornik <dvornikl@mailbox.hu>, 2004.
+# Laszlo Dvornik <dvornik@invitel.hu>, 2004.
+# Arpad Biro <biro_arpad@yahoo.com>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gimp-libgimp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-04-26 14:44+0200\n"
-"PO-Revision-Date: 2004-04-26 17:43+0200\n"
-"Last-Translator: Laszlo Dvornik <dvornikl@mailbox.hu>\n"
+"POT-Creation-Date: 2004-05-23 19:47+0200\n"
+"PO-Revision-Date: 2004-05-28 20:07+0200\n"
+"Last-Translator: Arpad Biro <biro_arpad@yahoo.com>\n"
 "Language-Team: Hungarian <gnome@gnome.hu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -93,18 +94,20 @@ msgid ""
 "(Do it manually to tune the result)"
 msgstr ""
 "Átalakítás indexeltté az alapértelmezett beállítások használatával\n"
-"(A finomhangoláshoz válassza a kézi beállítást)"
+"(a finomhangoláshoz válassza a kézi beállítást)"
 
 #: libgimp/gimpexport.c:306
 #, c-format
 msgid "%s can only handle bitmap (two color) indexed images"
-msgstr ""
+msgstr "%s csak bitképes (kétszínű) indexelt képeket kezel"
 
 #: libgimp/gimpexport.c:307
 msgid ""
 "Convert to Indexed using bitmap default settings\n"
 "(Do it manually to tune the result)"
 msgstr ""
+"Átalakítás indexeltté az alapértelmezett bitképes beállítások használatával\n"
+"(a finomhangoláshoz válassza a kézi beállítást)"
 
 #: libgimp/gimpexport.c:316
 #, c-format
@@ -124,11 +127,11 @@ msgstr "%s csak szürkeárnyalatos vagy indexelt képeket kezel"
 #: libgimp/gimpexport.c:346
 #, c-format
 msgid "%s needs an alpha channel"
-msgstr "%s számára szükséges egy alfa csatorna"
+msgstr "%s számára szükséges egy alfa-csatorna"
 
 #: libgimp/gimpexport.c:347
 msgid "Add Alpha Channel"
-msgstr "Alfa csatorna hozzáadása"
+msgstr "Alfa-csatorna hozzáadása"
 
 #: libgimp/gimpexport.c:382
 msgid "Confirm Save"
@@ -157,8 +160,8 @@ msgid ""
 "Your image should be exported before it can be saved as %s for the following "
 "reasons:"
 msgstr ""
-"A képet exportálni kellene, mielőtt %s néven mentésre kerülne a következő "
-"okból:"
+"A képet a következő okokból exportálni kellene, mielőtt %s formátumban "
+"mentésre kerülne:"
 
 #: libgimp/gimpexport.c:563
 msgid "The export conversion won't modify your original image."
@@ -179,6 +182,8 @@ msgid ""
 "You are about to save a channel (saved selection) as %s.\n"
 "This will not save the visible layers."
 msgstr ""
+"Csatornát (elmentett kijelölést) készül menteni %s formátumba.\n"
+"Ez nem fogja menteni a látható rétegeket."
 
 #: libgimp/gimpfontmenu.c:89
 msgid "Font Selection"
@@ -257,19 +262,19 @@ msgstr "%d GB"
 #: libgimpmodule/gimpmodule.c:177
 #, c-format
 msgid "Loading module: '%s'\n"
-msgstr "Modul betöltése: '%s'\n"
+msgstr "Modul betöltése: \"%s\"\n"
 
 #: libgimpmodule/gimpmodule.c:194 libgimpmodule/gimpmodule.c:213
 #: libgimpmodule/gimpmodule.c:328 libgimpmodule/gimpmodule.c:356
 #: libgimpmodule/gimpmodule.c:450
 #, c-format
 msgid "Module '%s' load error: %s"
-msgstr "'%s' modul betöltési hiba: %s"
+msgstr "Hiba a(z) \"%s\" modul betöltése közben: %s"
 
 #: libgimpmodule/gimpmodule.c:283
 #, c-format
 msgid "Skipping module: '%s'\n"
-msgstr "Modul kihagyása: '%s'\n"
+msgstr "Modul kihagyása: \"%s\"\n"
 
 #: libgimpmodule/gimpmodule.c:424
 msgid "Module error"
@@ -290,7 +295,7 @@ msgstr "Nincs betöltve"
 #: libgimpthumb/gimpthumb-utils.c:196
 #, c-format
 msgid "Failed to create thumbnail folder '%s'."
-msgstr "A(z) '%s' bélyegkép mappa létrehozása sikertelen."
+msgstr "A(z) \"%s\" bélyegképmappa létrehozása sikertelen."
 
 #: libgimpwidgets/gimpcolorbutton.c:93
 msgid "/_Foreground Color"
@@ -302,7 +307,7 @@ msgstr "/_Háttérszín"
 
 #: libgimpwidgets/gimpcolorbutton.c:98
 msgid "/Blac_k"
-msgstr "/F_ekete"
+msgstr "/Fe_kete"
 
 #: libgimpwidgets/gimpcolorbutton.c:100
 msgid "/_White"
@@ -310,7 +315,7 @@ msgstr "/_Fehér"
 
 #: libgimpwidgets/gimpcolorscales.c:142
 msgid "Scales"
-msgstr ""
+msgstr "Színskála"
 
 #: libgimpwidgets/gimpcolorscales.c:164 libgimpwidgets/gimpcolorselect.c:353
 msgid "_H"
@@ -418,6 +423,8 @@ msgid ""
 "Click the eyedropper, then click a color anywhere on your screen to select "
 "that color."
 msgstr ""
+"Egy képernyőpont színének kiválasztásához kattintson a pipettára, majd a "
+"kívánt képernyőpontra."
 
 #: libgimpwidgets/gimpstock.c:113
 msgid "Anchor"
@@ -461,11 +468,11 @@ msgstr "S_orköz"
 
 #: libgimpwidgets/gimpstock.c:184
 msgid "_Resize"
-msgstr "Átmé_retezés"
+msgstr "Mé_ret módosítása"
 
 #: libgimpwidgets/gimpstock.c:185 libgimpwidgets/gimpstock.c:284
 msgid "_Scale"
-msgstr "_Méretezés"
+msgstr "Átmére_tezés"
 
 #: libgimpwidgets/gimpstock.c:263
 msgid "Crop"
@@ -514,38 +521,40 @@ msgstr "Ú_j kiindulóérték"
 #: libgimpwidgets/gimpwidgets.c:1308
 msgid "Seed random number generator with a generated random number"
 msgstr ""
+"A véletlenszám-előállítás kiindulóértékének beállítása egy előállított "
+"véletlenszámmal"
 
 #: libgimpwidgets/gimpwidgets.c:1312
 msgid "_Randomize"
-msgstr ""
+msgstr "_Véletlenszerűen"
 
 #: modules/cdisplay_colorblind.c:124
 msgid "Color deficit simulation filter (Brettel-Vienot-Mollon algorithm)"
-msgstr ""
+msgstr "Színérzékelési problémát szimuláló szűrő (Brettel-Vienot-Mollon-módszer)"
 
 #: modules/cdisplay_colorblind.c:190
 msgid "Color Deficient Vision"
-msgstr ""
+msgstr "Színérzékelési probléma"
 
 #: modules/cdisplay_colorblind.c:464
 msgid "Color _Deficiency Type:"
-msgstr ""
+msgstr "Érzékelési probléma _típusa:"
 
 #: modules/cdisplay_colorblind.c:473
 msgid "Protanopia (insensitivity to red)"
-msgstr ""
+msgstr "Protanopia (a vörös szín érzékelésének hiánya)"
 
 #: modules/cdisplay_colorblind.c:476
 msgid "Deuteranopia (insensitivity to green)"
-msgstr ""
+msgstr "Deuteranopia (a zöld szín érzékelésének hiánya)"
 
 #: modules/cdisplay_colorblind.c:479
 msgid "Tritanopia (insensitivity to blue)"
-msgstr ""
+msgstr "Tritanopia (a kék szín érzékelésének hiánya)"
 
 #: modules/cdisplay_gamma.c:90
 msgid "Gamma color display filter"
-msgstr ""
+msgstr "\"Gamma\" színmegjelenítési szűrő"
 
 #: modules/cdisplay_gamma.c:156
 msgid "Gamma"
@@ -557,7 +566,7 @@ msgstr "_Gamma:"
 
 #: modules/cdisplay_highcontrast.c:90
 msgid "High Contrast color display filter"
-msgstr ""
+msgstr "\"Magas kontraszt\" színmegjelenítési szűrő"
 
 #: modules/cdisplay_highcontrast.c:156
 msgid "Contrast"
@@ -565,31 +574,31 @@ msgstr "Kontraszt"
 
 #: modules/cdisplay_highcontrast.c:308
 msgid "Contrast C_ycles:"
-msgstr ""
+msgstr "Kontraszt_ciklusok:"
 
 #: modules/cdisplay_proof.c:102
 msgid "Color proof filter using ICC color profile"
-msgstr ""
+msgstr "ICC színprofilt használó \"színes próbanyomat\" szűrő"
 
 #: modules/cdisplay_proof.c:166
 msgid "Color Proof"
-msgstr ""
+msgstr "Színes próbanyomat"
 
 #: modules/cdisplay_proof.c:319
 msgid "Perceptual"
-msgstr ""
+msgstr "Érzékelési"
 
 #: modules/cdisplay_proof.c:321
 msgid "Relative Colorimetric"
-msgstr ""
+msgstr "Relatív színmérési"
 
 #: modules/cdisplay_proof.c:325
 msgid "Absolute Colorimetric"
-msgstr ""
+msgstr "Abszolút színmérési"
 
 #: modules/cdisplay_proof.c:331
 msgid "_Intent:"
-msgstr ""
+msgstr "_Cél:"
 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
@@ -601,7 +610,7 @@ msgstr "_Profil:"
 
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
-msgstr ""
+msgstr "_Feketepont-kompenzáció"
 
 #: modules/colorsel_cmyk.c:73
 msgid "CMYK color selector"
@@ -645,7 +654,7 @@ msgstr "Fekete"
 
 #: modules/colorsel_cmyk.c:193
 msgid "Black Pullout (%):"
-msgstr ""
+msgstr "Fekete kivonása (%):"
 
 #: modules/colorsel_triangle.c:110
 msgid "Painter-style triangle color selector"
