--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-29  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimptemplateeditor.c
+	(gimp_template_editor_constructor): add the spinbuttons to the
+	size entry in the correct order. Fixes bug 143347.
+
 2004-05-28  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpdnd.c (gimp_dnd_open_files): if the dropped
