2004-05-31  Sven Neumann  <sven@gimp.org>
	* app/paint/gimpconvolve.c
	* app/paint-funcs/paint-funcs.[ch]
	* app/tools/gimpiscissorstool.c: reverted last change and applied
	new patch instead (bug #72878).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13453 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,13 @@
 
 	* app/paint/gimpconvolve.c
 	* app/paint-funcs/paint-funcs.[ch]
+	* app/tools/gimpiscissorstool.c: reverted last change and applied
+	new patch instead (bug #72878).
+
+2004-05-31  Sven Neumann  <sven@gimp.org>
+
+	* app/paint/gimpconvolve.c
+	* app/paint-funcs/paint-funcs.[ch]
 	* app/tools/gimpiscissorstool.c: applied a patch from Philip
 	Lafleur that fixes RGBA resampling in Convolve tool (bug #72878).
 
