--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-31  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: updated.
+
 2004-05-28  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
