--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2004-05-31  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/Makefile.am
+	* app/widgets/widgets-types.h
+	* app/widgets/gimpcontainerentry.[ch]: added new widget
+	GimpContainerEntry, a GtkEntry with completion that implements the
+	GimpContainerView interface.
+
+	* app/tools/gimptextoptions.c (gimp_text_options_gui): added a
+	GimpContainerEntry to select the font.
+
+2004-05-31  Sven Neumann  <sven@gimp.org>
+
 	* app/Makefile.am
 	* app/actions/file-actions.c
 	* app/actions/file-commands.[ch]
