--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-05-31  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpcontainerentry.[ch]: export the column enum.
+
+	* app/gui/file-open-location-dialog.c: use a GimpContainerEntry
+	on the documents list. Use a custom match function that matches
+	without the leading protocol part.
+
 2004-05-31  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/Makefile.am
