--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-01  Sven Neumann  <sven@gimp.org>
+
+	* app/actions/image-commands.c (image_new_cmd_callback):
+	initialize the dialog by calling file_new_dialog_set(). Fixes bug
+	#143477.
+
 2004-05-31  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpcontainerentry.[ch]: export the column enum.
