--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-01  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: updated italian translation.
+
 2004-05-31  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: updated.
