2004-06-01  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/autocrop.c (query): register as "Autocrop Image"
	and "Autocrop Layer".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13462 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-01  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/autocrop.c (query): register as "Autocrop Image"
+	and "Autocrop Layer".
+
+2004-06-01  Sven Neumann  <sven@gimp.org>
+
 	* app/actions/image-commands.c (image_new_cmd_callback):
 	initialize the dialog by calling file_new_dialog_set(). Fixes bug
 	#143477.
