2004-06-01  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimptoolbox.c (toolbox_area_notify): removed
	unused variable.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13466 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-01  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimptoolbox.c (toolbox_area_notify): removed
+	unused variable.
+
 2004-06-01  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/autocrop.c (query): register as "Autocrop Image"
