2004-06-01  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpcontainertreeview-dnd.c
	* app/widgets/gimpitemtreeview.c: some cleanup in the tree view
	DND code.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13468 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-06-01  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpcontainertreeview-dnd.c
+	* app/widgets/gimpitemtreeview.c: some cleanup in the tree view
+	DND code.
+
+2004-06-01  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpsessioninfo.c (gimp_session_info_restore): added
 	a horrible hack that sets the paned's position after the first
 	"size-allocate" after "map". Makes position remembering work for
