--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-01  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/tiff.c: don't call gtk_entry_set_text() with a
+	NULL text.
+
 2004-06-01  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpcontainertreeview-dnd.c
